--- a/Forms/frmTelaInicial.pt-BR.resx
+++ b/Forms/frmTelaInicial.pt-BR.resx
@@ -122,7 +122,7 @@
     <value>Arial, 24pt, style=Bold</value>
   </data>
   <data name="lblTituloInicial.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1341, 747</value>
+    <value>744, 96</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="lblTituloInicial.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
@@ -131,18 +131,33 @@
   <data name="lblTituloInicial.Size" type="System.Drawing.Size, System.Drawing">
     <value>574, 46</value>
   </data>
-  <data name="toolStripUserName.Text" xml:space="preserve">
-    <value>Usuário:</value>
+  <data name="lblTituloInicial.Text" xml:space="preserve">
+    <value>Gerenciador de Empréstimos</value>
+  </data>
+  <data name="toolStripUserName.Size" type="System.Drawing.Size, System.Drawing">
+    <value>0, 20</value>
+  </data>
+  <data name="toolStripUserName.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleLeft</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lblEspacoVazio.AutoSize" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="lblEspacoVazio.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1724, 20</value>
+  </data>
+  <data name="toolStsStripSistemVersion.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleRight</value>
+  </data>
   <data name="toolStsStripSistemVersion.RightToLeftAutoMirrorImage" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="toolStsStripSistemVersion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1834, 20</value>
+    <value>172, 20</value>
   </data>
   <data name="toolStsStripSistemVersion.Text" xml:space="preserve">
-    <value>Versão  do Sistema: 1.1.2</value>
+    <value>Versão  do Sistema: 1.1.5</value>
   </data>
   <data name="toolStsStripSistemVersion.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleRight</value>
@@ -150,8 +165,11 @@
   <data name="stsStripSistemVersion.Size" type="System.Drawing.Size, System.Drawing">
     <value>1911, 26</value>
   </data>
-  <data name="stsStripSistemVersion.Text" xml:space="preserve">
-    <value>statusStrip1</value>
+  <data name="MenuStripMenusSistema.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1911, 28</value>
+  </data>
+  <data name="arquivoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Arquivo</value>
   </data>
   <data name="loginToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 26</value>
@@ -171,14 +189,8 @@
   <data name="sairDoSistemaToolStripMenuItem.Text" xml:space="preserve">
     <value>Sair</value>
   </data>
-  <data name="arquivoToolStripMenuItem.Text" xml:space="preserve">
-    <value>Arquivo</value>
-  </data>
-  <data name="MenuStripCadastroCliente.Size" type="System.Drawing.Size, System.Drawing">
-    <value>138, 26</value>
-  </data>
-  <data name="MenuStripCadastroCliente.Text" xml:space="preserve">
-    <value>Cliente</value>
+  <data name="MenuStripCadastro.Text" xml:space="preserve">
+    <value>Cadastro</value>
   </data>
   <data name="MenuStripCliente.Size" type="System.Drawing.Size, System.Drawing">
     <value>149, 26</value>
@@ -186,11 +198,11 @@
   <data name="MenuStripCliente.Text" xml:space="preserve">
     <value>Cliente</value>
   </data>
-  <data name="funcionárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>169, 26</value>
+  <data name="MenuStripCadastroCliente.Size" type="System.Drawing.Size, System.Drawing">
+    <value>138, 26</value>
   </data>
-  <data name="funcionárioToolStripMenuItem.Text" xml:space="preserve">
-    <value>Funcionário</value>
+  <data name="MenuStripCadastroCliente.Text" xml:space="preserve">
+    <value>Cliente</value>
   </data>
   <data name="empresaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>149, 26</value>
@@ -198,8 +210,20 @@
   <data name="empresaToolStripMenuItem.Text" xml:space="preserve">
     <value>Empresa</value>
   </data>
-  <data name="MenuStripCadastro.Text" xml:space="preserve">
-    <value>Cadastro</value>
+  <data name="funcionárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>169, 26</value>
+  </data>
+  <data name="funcionárioToolStripMenuItem.Text" xml:space="preserve">
+    <value>Funcionário</value>
+  </data>
+  <data name="MenuStripFinanceiro.Text" xml:space="preserve">
+    <value>Financeiro</value>
+  </data>
+  <data name="MenuStripEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
+    <value>178, 26</value>
+  </data>
+  <data name="MenuStripEmprestimos.Text" xml:space="preserve">
+    <value>Emprestimos</value>
   </data>
   <data name="MenuStripNovosEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
     <value>239, 26</value>
@@ -210,20 +234,8 @@
   <data name="pagamentoDeParcelaToolStripMenuItem.Text" xml:space="preserve">
     <value>Pagamento de Parcela</value>
   </data>
-  <data name="MenuStripEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 26</value>
-  </data>
-  <data name="MenuStripEmprestimos.Text" xml:space="preserve">
-    <value>Emprestimos</value>
-  </data>
-  <data name="MenuStripFinanceiro.Text" xml:space="preserve">
-    <value>Financeiro</value>
-  </data>
-  <data name="MenuStripRelatoriosVisuEmprestimos.Text" xml:space="preserve">
-    <value>Visualizar Emprestimos</value>
-  </data>
-  <data name="visualizarParcelasToolStripMenuItem.Text" xml:space="preserve">
-    <value>Visualizar Parcelas</value>
+  <data name="MenuStripRelatorios.Text" xml:space="preserve">
+    <value>Relatórios</value>
   </data>
   <data name="MenuStripRelatoriosEmprestimos.Size" type="System.Drawing.Size, System.Drawing">
     <value>178, 26</value>
@@ -231,14 +243,14 @@
   <data name="MenuStripRelatoriosEmprestimos.Text" xml:space="preserve">
     <value>Emprestimos</value>
   </data>
-  <data name="MenuStripRelatorios.Text" xml:space="preserve">
-    <value>Relatórios</value>
+  <data name="MenuStripRelatoriosVisuEmprestimos.Text" xml:space="preserve">
+    <value>Visualizar Emprestimos</value>
   </data>
-  <data name="novoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>194, 26</value>
+  <data name="visualizarParcelasToolStripMenuItem.Text" xml:space="preserve">
+    <value>Visualizar Parcelas</value>
   </data>
-  <data name="novoToolStripMenuItem.Text" xml:space="preserve">
-    <value>Novo (Suporte)</value>
+  <data name="ajudaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Ajuda</value>
   </data>
   <data name="chamadoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 26</value>
@@ -246,11 +258,11 @@
   <data name="chamadoToolStripMenuItem.Text" xml:space="preserve">
     <value>Chamado</value>
   </data>
-  <data name="ajudaToolStripMenuItem.Text" xml:space="preserve">
-    <value>Ajuda</value>
+  <data name="novoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>194, 26</value>
   </data>
-  <data name="MenuStripMenusSistema.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1911, 28</value>
+  <data name="novoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Novo (Suporte)</value>
   </data>
   <data name="picBoxLogoSistema2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -333,18 +345,27 @@
         jq+TRxZ6Xl7/ry+meic5v7gt+boZPV/floPGihUrVqxYsWJVZ/0PQ1yAbB5Wm5gAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="picBoxLogoSistema2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1124, 145</value>
+  </data>
   <data name="picBoxLogoSistema2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 146</value>
+    <value>145, 194</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="picBoxLogoSistema.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
   <data name="picBoxLogoSistema.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="picBoxLogoSistema.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1156, 693</value>
+    <value>0, 0</value>
   </data>
   <data name="picBoxLogoSistema.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 260</value>
+    <value>1343, 342</value>
+  </data>
+  <data name="picBoxLogoSistema.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
+    <value>Zoom</value>
   </data>
   <data name="lblTituloSistemas.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -356,7 +377,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblTituloSistemas.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1516, 794</value>
+    <value>922, 142</value>
   </data>
   <data name="lblTituloSistemas.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -367,8 +388,17 @@
   <data name="lblTituloSistemas.Text" xml:space="preserve">
     <value>Sistemas</value>
   </data>
+  <data name="painelLogoSistema.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="painelLogoSistema.Location" type="System.Drawing.Point, System.Drawing">
+    <value>529, 611</value>
+  </data>
+  <data name="painelLogoSistema.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1343, 342</value>
+  </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>9, 17</value>
+    <value>120, 120</value>
   </data>
   <data name="$this.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Stretch</value>
@@ -751,5 +781,8 @@
         478gfvhpMmAw6SshYvwxIXIK8fzLhPCxx/gvhR9++OGHH3744Ycffvhp6uf/A7XVE2+lQPNgAAAAAElF
         TkSuQmCC
 </value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Gerenciador de Empréstimos</value>
   </data>
 </root>
